--- a/package.json
+++ b/package.json
@@ -26,18 +26,26 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
-    "knex": "^0.21.12",
+    "knex": "^0.21.21",
     "morgan": "^1.10.0",
-    "pg": "^8.9.0",
+    "pg": "^8.11.3",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "nodemon": "^2.0.21",
+    "nodemon": "^2.0.22",
     "supertest": "^6.1.3"
   },
   "directories": {
     "doc": "docs",
     "test": "test"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CraigWilliamHyatt/we-love-movies-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CraigWilliamHyatt/we-love-movies-backend/issues"
+  },
+  "homepage": "https://github.com/CraigWilliamHyatt/we-love-movies-backend#readme"
 }
